selfhost/test/typechecker/tuple/error_type_mismatch_too_small.1.out
Error at %FILE_NAME%:1:31
Type mismatch
  |  val t: (Int, String, Int[]) = (1, "two")
                                   ^
Expected: (Int, String, Int[])
but instead found: (Int, String)
