selfhost/test/typechecker/tuple/error_type_mismatch_too_small.1.abra
val t: (Int, String, Int[]) = (1, "two")